@@ -1,1 +1,1 @@
-DIST termcolors-mv-2.0.tar.gz 9253 SHA256 7905858f44af975ab84e2011bc5ff1170b7f48e4ec20e97f7f224d9b3323173b SHA512 c39648c38a49710fb64593da07c344ed09ff16689b896bfe822f9245600c8ce5a8b326ed2ba192a1868c358434306df70a9589fafc681110425694a4ff53f67b WHIRLPOOL 128d8f386c8e8f081d9a53bd970075ca79f41297bbd6fb44ee6a0697719b31be52f124f4298f12d069446d0413129df5952ed3e4870c01a6359e10141f031e5e
+DIST termcolors-mv-3.0.tar.gz 7720 SHA256 e796c7d33b7c52aed72b780f8344989cb25cc17e505a0f3d1a70c4104d79c842 SHA512 be32c3713346a494ebfddc1855d21c28333597593f7c6d4b6035ec708e1ec5944f21db1bc81703a075152877f940da9eac94ed07471f6ba8111231c0098a4b1a WHIRLPOOL d8c2d332ab3e49fda40c82789e17267ed309a3e2924beaa1c297a1e83c8616325e112afe28dc754b30dbf08e395b57835af2cddb89124aa65aad484ed6e4c68a
