@@ -14,6 +14,7 @@
 		<remote-id type="github">vaeth/termcolors-mv</remote-id>
 	</upstream>
 	<use>
+		<flag name="create">Install DIR_COLORS-create perl script</flag>
 		<flag name="perl">Install 256colors perl script</flag>
 	</use>
 </pkgmetadata>
