@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*termcolors-3.0 (07 Aug 2013)
+
+  07 Aug 2013; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild.
+
 *termcolors-2.0 (23 Mar 2013)
 
   23 Mar 2013; Martin Väth <martin@mvath.de>:
